Rewrite - IntroStage merged with ProjectStage